<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lcbg"
    tools:context=".ui.course.Level_Wise_Course" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="195dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="true"
        android:text="@string/german"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="195dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="200dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="true"
        android:text="@string/french"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="195dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="300dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="true"
        android:text="@string/japanese"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="195dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="400dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="true"
        android:text="@string/spanish"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="195dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="500dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="true"
        android:text="@string/russian"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="195dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="600dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="true"
        android:text="@string/sanskrit"
        android:textColor="@color/black"
        android:textSize="30sp" />
</FrameLayout>